src/test/deca/context/invalid/instanceof_noclass.deca
// Test 3.42 pour l'instance of

